# bridge

./: .dockerignore  .env.sample  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  README.md  client.py  compose.yaml  dockerfile
.github/workflows/: docker.yaml  rust.yml
docs/: api.md  signet-setup.md
src/: api.rs  bitcoin_bridge.rs  block_index.rs  blockfile.rs  blockstore.rs  chaininterface.rs  chainview.rs  cli.rs  esplora.rs  leaf_cache.rs  main.rs  node.rs  prove.rs  prover.rs  shinigami_block_storage.rs  shinigami_bridge.rs  udata.rs
