[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.30.0"
bitcoincore-rpc = "0.17.0"
rustreexo = { path = "../rustreexo/" }
sha2 = "0.10.6"
anyhow = "1.0.71"
kv = "0.24.0"
