[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.29" }
bitcoincore-rpc = "0.16.0"
bitcoin_hashes = "0.11"
rustreexo = { git = "https://github.com/Davidson-Souza/rustreexo", branch = "full-pollard"}
sha2 = "0.10.6"
anyhow = "1.0.71"
kv = "0.24.0"

[patch."https://github.com/rust-lang/crates.io-index"]
bitcoin = { git = "https://github.com/Davidson-Souza/rust-bitcoin", rev = "a320c6535567acd3771da37759a7644eea5c6eb2" }
