[package]
name = "bridge"
version = "0.1.3"
edition = "2021"
authors = ["Davidson Souza <davidson.lucas.souza@outlook.com>"]
description = "A hiper specialized Utreexo bridge node"
license = "MIT"
repository = "https://github.com/Davidson-Souza/bridge"
readme = "README.md"
homepage = "https://github.com/Davidson-Souza/bridge"
documentation = "https://github.com/Davidson-Souza/bridge"
keywords = ["utreexo", "bitcoin", "blockchain", "rust"]
categories = ["bitcoin", "tools"]

[dependencies]
bitcoin = { version = "0.29" }
bitcoincore-rpc = "0.16.0"
bitcoin_hashes = "0.11"
rustreexo = { git = "https://github.com/mit-dci/rustreexo", rev = "91f70ef", features = ["with-serde"] }
sha2 = "0.10.6"
anyhow = "1.0.71"
kv = "0.24.0"
actix = { version = "0.13.0", optional = true }
actix-web = { version = "4.9", optional = true }
serde = "1.0.183"
actix-files = { version = "0.6.2", optional = true }
actix-session = { version = "0.7.2", optional = true }
async-stream = "0.3.5"
futures = "0.3.28"
actix-rt = "2.8.0"
hex = "0.4.3"
log = "0.4.19"
simplelog = "0.12.1"
reqwest = { version = "0.11.18", features = [
    "blocking",
    "rustls",
    "__tls",
    "__rustls",
    "rustls-tls-webpki-roots",
], optional = true, default-features = false }
serde_json = { version = "1.0.128" }
actix-cors = { version = "0.6.4", optional = true }
mmap = "0.1.1"
jemallocator = "0.5.4"
starknet-crypto = { version = "0.7.2", optional = true }
clap = { version = "4.5.20", features = ["derive"] }
time = "0.3.36"
ahash = "0.8.11"
ctrlc = "3.4.5"
[patch."https://github.com/rust-lang/crates.io-index"]
bitcoin = { git = "https://github.com/Davidson-Souza/rust-bitcoin", rev = "a320c6535567acd3771da37759a7644eea5c6eb2" }

[features]
default = ["bitcoin", "node", "api"]
esplora = ["reqwest"]
bitcoin = []
node = []
api = ["actix", "actix-web", "actix-session", "actix-cors", "actix-files"]
shinigami = ["starknet-crypto"]
memory-leaf-map = []

[dev-dependencies]
